bootstrap body 적용

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		endfirst homepage
+		<h1>endfirst homepage</h1>
 	</body>
 </html>
