--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
+
+
 <html>
 	<head>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		
+			<style>
+				@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+				header{ height: 100px; background-color: rgba(125, 211, 242,0.5); border-radius: 15px; padding: 10px; margin:10px 0;font-family: 'Nanum Gothic', sans-serif;  text-align: center;}
+			</style>
 	</head>
 	<body>
-		<h1>endfirst homepage</h1>
+	
+		<div class="container">
+			<header>
+				<h2>endfirst homepage</h2>
+			</header>
+			
+			<div class="row">
+				<div class="col-md-4">
+					<p>sample</p>
+				</div>
+				
+				<div class="col-md-8">
+					<p>test</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
